# kids-bank

./: README.md
kid-bank-lib/: Cargo.toml
kid-bank-lib/src/: acct_management.rs  dynamo_db.rs  lib.rs
kids-bank-cli/: Cargo.toml  README.md  accounts.db  kids-bank.db
kids-bank-cli/src/: main.rs  repl.rs
kids-bank-cli/src/commands/: cmd_create_account.rs  cmd_deposit.rs  cmd_get_account_by_email.rs  cmd_get_accounts.rs  cmd_withdraw.rs  command.rs  mod.rs
kids-bank-cli/src/db/: mod.rs  sqlite.rs  sqlite_db.rs
kids-bank-dynamodb/: README.md  samconfig.toml  template.yaml
kids-bank-dynamodb/rust_app/: Cargo.toml
kids-bank-fe/kids_bank_app/: README.md  pubspec.yaml
kids-bank-fe/kids_bank_app/android/app/: build.gradle.kts
kids-bank-fe/kids_bank_app/android/app/src/main/: AndroidManifest.xml
kids-bank-fe/kids_bank_app/android/app/src/main/kotlin/com/example/kids_bank_app/: MainActivity.kt
kids-bank-fe/kids_bank_app/ios/Runner/: Info.plist
kids-bank-fe/kids_bank_app/ios/Runner.xcodeproj/: project.pbxproj
kids-bank-fe/kids_bank_app/lib/: account.dart  app_config.dart  login.dart  main.dart
kids-bank-fe/kids_bank_app/linux/: CMakeLists.txt
kids-bank-fe/kids_bank_app/linux/runner/: my_application.cc
kids-bank-fe/kids_bank_app/macos/Runner.xcodeproj/: project.pbxproj
kids-bank-fe/kids_bank_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
kids-bank-fe/kids_bank_app/macos/Runner/Configs/: AppInfo.xcconfig
kids-bank-fe/kids_bank_app/test/: widget_test.dart
kids-bank-fe/kids_bank_app/web/: index.html  manifest.json
kids-bank-fe/kids_bank_app/windows/: CMakeLists.txt
kids-bank-fe/kids_bank_app/windows/runner/: Runner.rc  main.cpp
kids-bank-get-accounts/: Cargo.toml
kids-bank-lib/: Cargo.toml  README.md
kids-bank-lib/src/: accounts.rs  acct_management.rs  dynamo_client.rs  dynamo_db.rs  dynamoclient.rs  lib.rs  postgres_client.rs  users.rs
kids-bank-sam/: README.md  api.http  samconfig.toml  template.yaml
kids-bank-sam/cfn/: account_ddb.yaml  authorizer.yaml  build.sh  deploy.sh  kidsbank_api.yaml  test.sh  validate.sh
kids-bank-sam/kids-bank-app/: .samignore  Cargo.toml
kids-bank-sam/kids-bank-app/src/: dynamo_client.rs  dynamo_db.rs  lib.rs  secrets_manager.rs  secretsmanager.rs
kids-bank-sam/kids-bank-app/src/handlers/: create_acct.rs  create_acct_handler.rs  deposit.rs  get_account.rs  get_account_by_email.rs  get_account_by_id.rs  get_accounts.rs  withdraw.rs
kids-bank-ui/: angular.json  package-lock.json  package.json
kids-bank-ui/src-tauri/: Cargo.toml  tauri.conf.json
kids-bank-ui/src-tauri/src/: main.rs
