[package]
name = "kids-bank-sam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
lambda_runtime = { version = "0.13.0", optional = true }
lambda_http = { version= "0.13.0", optional = true }
aws-sdk-config = "1.48.0"
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.50.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
kids-bank-lib = { path = "../../kids-bank-lib" }

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "lambda_http"]

[[bin]]
name = "create-acct"
path = "src/bin/create_acct.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "get-accounts"
path = "src/bin/get_accounts.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "get-account"
path = "src/bin/get_account.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "deposit"
path = "src/bin/deposit.rs"
test = false
required-features = ["lambda"]

[[bin]]
name = "withdraw"
path = "src/bin/withdraw.rs"
test = false
required-features = ["lambda"]

