[package]
name = "kids-bank-sam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
aws-sdk-config = "1.48.0"
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.50.0"
lambda_http = {version = "0.13.0", optional = true }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
kids-bank-lib = { path = "../../kids-bank-lib" }

[dev-dependencies]
aws-smithy-http = "0.60.11"
aws-types = { version = "1.3.3"}
http = "1.1.0"
mockall = "0.13.0"

[features]
default = ["lambda"]
lambda = ["lambda_http"]
required-features = ["lambda"]

[[bin]]
name = "create-acct"
path = "src/bin/create_acct.rs"
required-features = ["lambda"]

[[bin]]
name = "get-accounts"
path = "src/bin/get_accounts.rs"
required-features = ["lambda"]

[[bin]]
name = "get-account"
path = "src/bin/get_account.rs"
required-features = ["lambda"]

[[bin]]
name = "deposit"
path = "src/bin/deposit.rs"
required-features = ["lambda"]

[[bin]]
name = "withdraw"
path = "src/bin/withdraw.rs"
required-features = ["lambda"]

