[package]
name = "kids-bank-sam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.5.8", features = ["behavior-version-latest"] }
aws_lambda_events = "0.16.0"
aws-sdk-secretsmanager = "1.59.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
lambda_http = {version = "0.14.0", optional = true }
lambda_runtime = "0.13.0"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1", features = ["macros"] }
kids-bank-lib = { path = "../../kids-bank-lib" }
http = "1.1.0"

[dev-dependencies]
aws-smithy-http = "0.60.11"
aws-types = { version = "1.3.3"}
http = "1.1.0"
mockall = "0.13.0"

[features]
default = ["lambda"]
lambda = ["lambda_http"]
required-features = ["lambda"]

[[bin]]
name = "create-acct"
path = "src/bin/create_acct.rs"
required-features = ["lambda"]

[[bin]]
name = "login"
path = "src/bin/login.rs"
required-features = ["lambda"]

[[bin]]
name = "get-accounts"
path = "src/bin/get_accounts.rs"
required-features = ["lambda"]

[[bin]]
name = "get-account"
path = "src/bin/get_account.rs"
required-features = ["lambda"]

[[bin]]
name = "deposit"
path = "src/bin/deposit.rs"
required-features = ["lambda"]

[[bin]]
name = "withdraw"
path = "src/bin/withdraw.rs"
required-features = ["lambda"]

[[bin]]
name = "update-balances"
path = "src/bin/update_acct_balances.rs"
required-features = ["lambda"]

[[bin]]
name = "authorizer"
path = "src/bin/custom_authorizer.rs"
required-features = ["lambda"]

[[bin]]
name = "sm-test"
path = "src/bin/sm_test.rs"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
opt-level = 3
